reveice mapping and get products has pagging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password = sapass
 spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
